@@ -13,7 +13,7 @@ set_time_limit(0);
 define('PKG_NAME','LikeDislike');
 define('PKG_NAME_LOWER','likedislike');
 define('PKG_VERSION','1.0.0');
-define('PKG_RELEASE','beta3');
+define('PKG_RELEASE','beta4');
  
 /* define build paths */
 $root = dirname(dirname(__FILE__)).'/';
